--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body, html {
 
 #loginBox {
     background-color: red;
-    padding: 1,5rem;
+    padding: 50px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgb(0, 0, 0, 0.2);
 }
