--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ body, html {
     align-items: center;
     background-color: #f0f0f0;
 }
+#startLogin {
+    background-color: red;
+    width: 595px;
+    height: 187px;
+    border-radius: 10px;
+}
 
 #loginBox {
     background-color: red;
@@ -17,3 +23,4 @@ body, html {
 .hidden {
     display: none;
 }
+
