--- a/style.css
+++ b/style.css
@@ -6,12 +6,14 @@ body, html {
     align-items: center;
     background-color: #f0f0f0;
 }
+
 #startLogin {
     background-color: rgba(255, 0, 0, 0.395);
     width: 595px;
     height: 187px;
     border-radius: 10px;
     font-size: 40px;
+    font-weight: bolder;
 }
 
 #loginBox {
@@ -27,6 +29,12 @@ body, html {
 }
 
 .hidden {
-    display: none;
+    opacity: 0;
+    overflow: hidden;
+    transition: opacity 1.0s ease-out, max-height 0.5s ease-out;
 }
 
+.visable {
+    opacity: 1;
+    transition: opacity 1.0s ease-in, max-height 0.5s ease-in;
+}
